--- a/main.rmd
+++ b/main.rmd
@@ -5,6 +5,7 @@ output:
   html_document:
     code_folding: hide
     number_sections: false
+    theme: journal
     toc: yes
     toc_depth: 3
     toc_float: yes
