--- a/main.rmd
+++ b/main.rmd
@@ -19,7 +19,8 @@ output:
 # include=T, eval=T, echo=T, results='hide'/'asis'/'markup',..., collapse=F, warning=T, message=T, error=T, cache=T, fig.width=6, fig.height=4, fig.dim=c(6,4) #inches, fig.align='left'/'center','right', 
 library(ezids)
 # knitr::opts_chunk$set(warning = F, results = "markup", message = F)
-knitr::opts_chunk$set(warning = F, message = F)
+knitr::opts_chunk$set(warning = F, results="hide", message = F)
+#knitr::opts_chunk$set(warning = F, message = F)
 options(scientific=T, digits = 3) 
 # options(scipen=9, digits = 3) 
 # ‘scipen’: integer. A penalty to be applied when deciding to print numeric values in fixed or exponential notation.  Positive values bias towards fixed and negative towards scientific notation: fixed notation will be preferred unless it is more than ‘scipen’ digits wider.
@@ -35,12 +36,13 @@ loan_df <- data.frame(read.csv("loan_approval_dataset.csv"))
 ```{r explore_dataset, echo=TRUE}
 # exploring dataset
 str(loan_df)
-head(loan_df)
 ```
+The dataset has **4269 observations** with **13 variables**
 
 ## Data Cleaning & Summary
 
 ### subsetting data and converting categorical variables to factor
+Removing loan_id column since it only serves as a unique identifier and does not contribute to the analysis. Furthermore, converting several numeric variables into factors, as they represent categorical information rather than continuous numerical values.
 ```{r data_cleaning, echo=TRUE}
 loan_df <- subset(loan_df, select = -c(loan_id))
 
@@ -51,6 +53,16 @@ loan_df$self_employed = as.factor(loan_df$self_employed)
 loan_df$loan_status = as.factor(loan_df$loan_status)
 str(loan_df)
 ```
+After conversion, the dataset contains four categorical variables:
+
+- **no_of_dependents:** Number of dependents the applicant has (`6` categories: `0`, `1`, `2`, `3`, `4`, `5`)
+
+- **education:** Applicant’s level of education (`2` categories: `Graduate`, `Not Graduate`)
+
+- **self_employed:** Whether the applicant is self-employed (`2` categories: `Yes`, `No`)
+
+- **loan_status:** Loan approval status — this is the target variable (`2` categories: `Approved`, `Rejected`)
+
 ### Finding NA values
 ```{r, echo=TRUE}
 sum(is.na(loan_df))
@@ -61,3 +73,19 @@ There are no NA values in the data set
 ```{r echo=TRUE}
 summary(loan_df)
 ```
+Overall, the dataset appears well-structured and balanced. **Categorical variables** such as `education`, `self_employment`, and `loan_status` show nearly **even distributions** across their categories. Most **numerical variables** fall within reasonable ranges, with average loan terms around `11 years` and CIBIL scores centered near `600`, both indicating realistic applicant profiles. However, some financial variables like income, loan amount, and asset values show wide variation and possible outliers. In particular, the presence of negative values in `residential_assets_value` points to potential data quality issues that will need correction before exploration or testing.
+
+### Cleaning up negative values
+Checking the number of rows that have negative values for `residential_assets_value` column
+```{r echo=TRUE}
+sum(loan_df$residential_assets_value < 0)
+```
+There are `28` entries with negative values.
+
+### Removing entries with negative values
+```{r echo=TRUE}
+loan_df <- loan_df[loan_df$residential_assets_value >= 0, ]
+str(loan_df)
+summary(loan_df)
+```
+After filtering out the rows with negative values, the dataset now has `4,241 observations`. The distributions across all variables look almost identical to before, showing that this cleaning step didn’t affect the data overall.
