--- a/main.rmd
+++ b/main.rmd
@@ -114,17 +114,28 @@ After filtering out the rows with negative values, the dataset now has `4,241 ob
 
 ### Is there a significant difference in average CIBIL scores between approved and rejected applicants?
 ```{r Q5, echo=TRUE}
+library(ggplot2)
+#CIBIL score frequency distribution
+hist(loan_df$cibil_score, main = "Frequency Distribution of CIBIL Scores", xlab = "CIBIL Score", ylab = "Frequency", breaks = 15, col = "lightblue")
+
+#CIBIL score frequency distribution
+loan_df$loan_status <- factor(trimws(loan_df$loan_status))
+ggplot(loan_df, aes(x = cibil_score, fill = loan_status)) +
+  geom_histogram(binwidth = 50, color = "white", alpha = 0.8) +
+  facet_wrap(~ loan_status, scales = "free_y") +
+  labs(title = "CIBIL Score Distribution by Loan Status", x = "CIBIL Score", y = "Frequency", fill = "Loan Status") + scale_fill_manual(values = c("Approved" = "darkgreen", "Rejected" = "darkred"))
+
+#CIBIL score frequency box chart
+ggplot(loan_df, aes(x = loan_status, y = cibil_score, fill = loan_status)) +
+  geom_boxplot() +
+  labs(title = "CIBIL Score Distribution by Loan Status", x = "Loan Status", y = "CIBIL Score") +
+  scale_fill_manual(values = c("Approved" = "darkgreen", "Rejected" = "darkred"))
 
 #t-test
 t.test(cibil_score ~ loan_status, data = loan_df)
 
-#box chart
-library(ggplot2)
-ggplot(loan_df, aes(x = loan_status, y = cibil_score, fill = loan_status)) +
-  geom_boxplot() +
-  labs(title = "CIBIL Score Distribution by Loan Status", x = "Loan Status", y = "CIBIL Score")
-
 ```
+The overall CIBIL score frequency distribution shows no apparent outliers. The individual distributions for approved and rejected loans show a few outliers, but it is not necessary to remove them. Even though the outliers are dragging the two means closer to each other, the means are still significantly different even when including them in the t-test.
 
 There is a significant difference in CIBIL scores between approved and rejected applicants because the p-value, 2e-16, is much lower than the standard alpha threshold of 0.05. This allows us to reject the null hypothesis that the two means of approved and rejected applicants are equal.
 
@@ -135,13 +146,32 @@ There is a significant difference in CIBIL scores between approved and rejected 
 rejected_shorter <- subset(loan_df, trimws(loan_status) == "Rejected" & loan_term <= 10)
 rejected_longer <- subset(loan_df, trimws(loan_status) == "Rejected" & loan_term > 10)
 
-t.test(rejected_shorter$cibil_score, rejected_longer$cibil_score)
+#Overall loan term frequency distribution
+ggplot(loan_df, aes(x = factor(loan_term))) + geom_bar(fill = "lightblue") + labs(title = "Frequency Distribution of Loan Terms", x = "Loan Term (Years)", y = "Frequency")
 
 #boxplot
 boxplot(rejected_shorter$cibil_score, rejected_longer$cibil_score, names = c("Shorter (<= 10 yrs)", "Longer (> 10 yrs)"), main = "CIBIL Score Distribution for Rejected Loans", ylab = "CIBIL Score", xlab = "Loan Term Group")
+
+#removing outliers
+removeOutliers <- function(x) {Q1 <- quantile(x, 0.25)
+Q3 <- quantile(x, 0.75);
+IQR_val <- Q3 - Q1;
+lower_bound <- Q1 - (1.5 * IQR_val);
+upper_bound <- Q3 + (1.5 * IQR_val);
+  
+return(x[x >= lower_bound & x <= upper_bound]);}
+
+cleaned_shorter_cibil <- removeOutliers(rejected_shorter$cibil_score)
+cleaned_longer_cibil <- removeOutliers(rejected_longer$cibil_score)
+
+t.test(rejected_shorter$cibil_score, rejected_longer$cibil_score)
+t.test(cleaned_shorter_cibil, cleaned_longer_cibil)
+
 ```
 
-There is not a significant difference in CIBIL scores between shorter (<= 10 years) and longer (>10 years) term loans within the regected group of applicants because the p-value, 1, is much higher than the standard alpha threshold of 0.05. This allows us to accept the null hypothesis that the two means of shorter and longer term loans of rejected applicants are equal.
+The overall loan terms frequency distribution shows no apparent outliers however there are a few in the shorter and longer loan term groups. Having this said, even when removing these outliers there no significant differences found between the two groups and their respective CIBIL scores.
+
+There is not a significant difference in CIBIL scores between shorter (<= 10 years) and longer (>10 years) term loans within the rejected group of applicants because the p-value, 1, is much higher than the standard alpha threshold of 0.05. This allows us to accept the null hypothesis that the two means of shorter and longer term loans of rejected applicants are equal.
 
 ### Is there a correlation between the CIBIL Score and the Loan Term among those whose loans are approved?  
 ```{r Q7, echo=TRUE}
