--- a/main.rmd
+++ b/main.rmd
@@ -201,7 +201,7 @@ hist(loan_df$bank_asset_value,
 # Reset plotting layout to default (1 plot per screen) after generation
 par(mfrow = c(1, 1))
 ```
-These tests all see if those with higher assets are approved compared to those who do not Since every p-value is less than the significant level of .05, we reject the null hypothesis and expect those with higher assets to get approved. All the histograms are skewed to the right. This means that most assets are valued at the low end, and extremely high values are rare. The Q-Q plot for the residential assets shows that the points strongly deviate from the line, particularly at the upper end, which is the high asset values. This means that it is not normally distributed. The commercial assets show a similar to residential assets, with a significant upward curve away from the diagonal. This is not normally distributed. The Luxury Asset Q-Q plots shows the same upward curving shape, which means it is not normally distributed. The Q-Q plot for the Bank Asset Value shows a deviation from the line, which makes it not normally distributed. 
+The shapiro tests all see if those with higher assets are approved compared to those who do not.  Since every p-value is less than the significant level of .05, we reject the null hypothesis and expect those with higher assets to get approved. All the histograms are skewed to the right. This means that most assets are valued at the low end, and extremely high values are rare. The Q-Q plot for the residential assets shows that the points strongly deviate from the line, particularly at the upper end, which is the high asset values. This means that it is not normally distributed. The commercial assets show a similar to residential assets, with a significant upward curve away from the diagonal. This is not normally distributed. The luxury asset Q-Q plots shows the same upward curving shape, which means it is not normally distributed. The Q-Q plot for the bank asset value shows a deviation from the line, which makes it not normally distributed. 
 
 
 ### Is there a significant difference in average income between approved and rejected applicants?
